--- a/blog.html
+++ b/blog.html
@@ -2,13 +2,28 @@
 layout: default
 title: Blog
 ---
-<h1>Latest Posts</h1>
 
-<ul>
-  {% for post in site.posts %}
-    <li>
-      <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
-      {{ post.excerpt }}
-    </li>
-  {% endfor %}
-</ul>
+## Large scale Openclip trained on LAION-2B
+
+LAION releases new state of the art open CLIP models to support image classification and generation.
+This release is expected to improve AI coherency in open source models.
+
+[Release notes](https://laion.ai/blog/large-openclip/)
+
+## Google PhD Fellowship list for 2022 is out
+
+Congratulations to all Google PhD Fellowship 2022 recipients. 
+Recipients are provided with funding for research activities as well as optional mentorship.
+Many recipients this year are from African institutions.
+
+[Google PhD Fellowship](https://research.google/outreach/phd-fellowship/)
+
+## COYO-700M - an Image-Text Pair Dataset
+
+COYO-700M, a large-scale dataset containing 747M image-text pairs as well as many other meta-attributes has been released.
+Goal of this dataset is to increase the usability to train various models. It can be used to train popular large-scale foundation models complementary to other similar datasets.
+
+[Gitbug Page](https://github.com/kakaobrain/coyo-dataset)
+
+
+
