--- a/blog.html
+++ b/blog.html
@@ -22,7 +22,7 @@ title: Blog
   <div class="post-preview__right">
     {{ post.excerpt }} 
     <a class="preview-title" href="{{ post.url }}">{{ post.title }}</a>
-    <span>{{ post.date | date: "%b %d, %Y" }}</span>
+    <span> - {{ post.date | date: "%b %d, %Y" }}</span>
     <div class="tag-group">
       {% for tag in post.tags %}
         <div class="tag"><span class="tag-text">{{ tag }}</span></div>
