--- a/blog.html
+++ b/blog.html
@@ -20,5 +20,10 @@ title: Blog
 </div>
 {% endfor %}
 
+<br>
+<br>
+
+<h1 class="col-header dark-orange">AI generated Gallery (Fun with Stable diffusion)</h1>
+
 {% include image-gallery.html folder="/uploads/album" %}
 
