--- a/blog.html
+++ b/blog.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: page
 title: Blog
 ---
 <br> <p> All of the posts on this blog are my own opinions. I post on topics that I find interesting. </p><br>
